Fixing query params spacing

--- a/react/src/components/queryParams/queryParams.scss
+++ b/react/src/components/queryParams/queryParams.scss
@@ -34,7 +34,8 @@
   }
   
   .form-row {
-    margin: 0 20px 10px 0;
+    margin: 0 20px 0 0;
+    padding: 7.5px 0;
 
     @media screen and (max-width: 800px) { 
       justify-content: center;
